add get src and dest labels
